  the dump file.

Add search terms to  "notmuch dump"

  The dump command now takes an optional search term much like notmuch
  search/show/tag. The output file argument of dump is deprecated in
  favour of using stdout.

Add "notmuch search" --offset and --limit options

  The search command now takes options --offset=[-]N and --limit=N to limit
  the number of results shown.

Optimizations
-------------

Search avoids opening and parsing message files

  We now store more information in the database so search no longer
  has to open every message file to get basic headers.  This can
  improve search speed by as much as 10X, but taking advantage of this
  requires a database rebuild:

	notmuch dump > notmuch.dump
	# Backup, then remove notmuch database ($MAIL/.notmuch)
	notmuch new
	notmuch restore notmuch.dump

Notmuch 0.9 (2011-10-01)
========================

New, general features
---------------------

Correct handling of interruptions during "notmuch new"

  "notmuch new" now operates as a series of small, self-consistent
  transactions, so it can correctly resume after an interruption or
  crash.  Previously, interruption could lose existing tags, fail to
  detect messages on resume, or leave the database in a state
  temporarily or permanently inconsistent with the mail store.

Library changes
---------------

New functions

  notmuch_database_begin_atomic and notmuch_database_end_atomic allow
  multiple database operations to be performed atomically.

  notmuch_database_find_message_by_filename does exactly what it says.

API changes

  notmuch_database_find_message (and n_d_f_m_by_filename) now return
  a status indicator and uses an output parameter for the
  message. This change required changing the SONAME of libnotmuch to
  libnotmuch.so.2

Python bindings changes
-----------------------

  - Re-encode python unicode objects to utf-8 before passing back to
    libnotmuch.
  - Support Database().begin_atomic()/end_atomic()